# DE_Neobank_Backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py  test1.py
Datalake/: main.py  upload_users_devices.py
Datalake/Data/: devices.csv  users.csv
Postgresql/: docker-compose.yml
dags/: airflow_code.py
database/: postmaster.pid
database/base/13780/: pg_internal.init
database/base/16384/: 1247  1249  1249_vm  1259  1259_vm  16385  16386  16392  16393  16395  16396  16403  16404  16406  16407  16408  16408_vm  16413  16414  16416  16417  16418  16419  16420  16425  16426  16428  16430  16431  16436  16437  16439  16440  16441  16442  16443  16448  16449  16451  16451_fsm  (+175 more)
database/global/: 1260  pg_control  pg_internal.init
database/pg_stat_tmp/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
database/pg_xact/: 0000
dbt_projectNeo/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt_projectNeo/models/01_bronze/: devices.sql  notifications.sql  schema.yml  transactions.sql  users.sql
dbt_projectNeo/models/02_silver/: date_dim.sql  device_notification_dim.sql  device_table.sql  merchant_dim.sql  notification_table.sql  schema.yml  transaction_table.sql  transactions_facts.sql  user_country_dim.sql  user_table.sql  users_dim.sql
dbt_projectNeo/models/02_silver2/: date_dimensions.sql  device_notification_dimensions.sql  merchant_dimensions.sql  schema.yml  transactions_facts.sql  user_country_dimensions.sql  users_dimensions.sql
dbt_projectNeo/models/02_silver_layer/: date_dimension.sql  merchant_dimension.sql  schema.yml
dbt_projectNeo/models/source/: src_bronzetiers.yml  src_neobank.yml
dbt_projectNeo/models/staging/: src_devices.sql  src_notifications.sql  (+2 more)
de_neobank_backend/dags/: airflow_code.py
de_neobank_backend/datalake/: main_datalake.py  upload_data_datalake.py
de_neobank_backend/pipeline/: create_tables.py  schemas.py  upload_data.py
pipelines/: bronze.py  create_tables.py
scripts/: entrypoint.sh
(+9 files in other folders)
