[tool.poetry]
name = "de-neobank-backend"
version = "0.1.0"
description = ""
authors = ["Alexander Halenke <ahalenke@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-storage = "^2.15.0"
pandas = "^2.0.3"
google-cloud-bigquery = "^3.19.0"
dbt-bigquery = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
